# AgentWatch

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: async_agent_example.py  demo_nested_traces.py  demo_seed.py  full_agent_example.py  grafana-dashboard.json  prometheus.yml  remote_agent_example.py
examples/openclaw-cron-sync/: README.md  sync.py
examples/openclaw-hook/: HOOK.md  handler.ts  index.ts  package.json
src/agentwatch/: __init__.py  alerts.py  async_tracing.py  auth.py  client.py  config.py  core.py  costs.py  cron_monitoring.py  health.py  ingest.py  logging.py  metrics.py  model_usage.py  models.py  patterns.py  reports.py  retention.py  storage.py  tracing.py
src/agentwatch/cli/: main.py
src/agentwatch/exporters/: __init__.py  otlp.py  prometheus.py
src/agentwatch/integrations/: __init__.py  crewai.py  fastapi.py  hooks.py  langchain.py  litellm.py  openclaw.py
src/agentwatch/server/: __init__.py  __main__.py  app.py  charts.py
src/agentwatch/server/templates/: agents.html  alerts.html  base.html  costs.html  crons.html  dashboard.html  (+7 more)
tests/: test_alerts.py  test_async_tracing.py  test_auth.py  test_charts.py  test_client.py  test_config.py  test_core.py  test_costs.py  test_crewai.py  test_cron_monitoring.py  test_health.py  test_ingest.py  test_integrations.py  test_langchain.py  test_litellm.py  test_logging.py  test_metrics.py  test_model_usage.py  test_models.py  test_otlp.py  test_patterns.py  test_prometheus.py  test_reports.py  test_retention.py  test_server.py  test_storage.py  test_tracing.py
tests/ui/: test_dashboard_ui.py
