[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentwatch"
version = "0.1.0"
description = "Lightweight observability for autonomous AI agents — tracing, health checks, cost tracking, pattern detection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AgentWatch Contributors" },
]
keywords = ["ai", "agents", "observability", "monitoring", "tracing", "llm", "cost-tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/agentwatch/agentwatch"
Documentation = "https://github.com/agentwatch/agentwatch#readme"
Repository = "https://github.com/agentwatch/agentwatch"
Issues = "https://github.com/agentwatch/agentwatch/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "jinja2>=3.0",
    "python-multipart>=0.0.5",
]

[project.scripts]
agentwatch = "agentwatch.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agentwatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
